# decky-streamer

./: .gitignore  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  build-release.sh  main.py  package.json  plugin.json  pnpm-lock.yaml  pyproject.toml  settings.py
.github/workflows/: release.yml
backend/: Dockerfile  Makefile  entrypoint.sh
src/: index.tsx
