[project]
name = "decky-streamer"
version = "0.1.0"
description = "Stream Steam Deck gameplay to RTMP endpoints"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "davidlockwood" }
]
keywords = ["decky", "steam-deck", "streaming", "rtmp"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120
